--- a/src/main/resources/templates/edit-movie.html
+++ b/src/main/resources/templates/edit-movie.html
@@ -1,20 +1,27 @@
+<!DOCTYPE html>
+
 <html lang="en" xmlns:th="http://thymeleaf.org">
+
+
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<head>
+    <meta charset="UTF-8">
+    <title>New movie</title>
+</head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 <div class="container">
     <div class="card card-login mx-auto text-center bg-dark">
         <div class="card-header mx-auto bg-dark">
             <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
-            <span class="logo_title mt-5"> Register </span>
+            <span class="logo_title mt-5"> Edit movie </span>
             <!--            <h1>--><?php //echo $message?><!--</h1>-->
 
         </div>
         <div class="card-body">
 
-            <form name="f" method="post" th:action="@{/auth/register}" th:object="${userDto}">
+            <form name="f" th:method="patch" th:action="@{/movie/{id}(id=${movieDto.getId()})}" th:object="${movieDto}">
                 <div class="input-group form-group">-->
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -24,19 +31,12 @@
                     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Errors</div>
                     <br>
 
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">3
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input type="password" th:field="*{password}" name="password" class="form-control" placeholder="Password">
-                        <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Errors</div>
-                    </div>
 
                     <div class="form-group">
                         <input type="submit" name="btn" value="Register"
                                class="btn btn-outline-danger float-right login_btn">
                     </div>
-                    <div th:if="${param.error}" style="color: red ">Invalid name or password
+                    <div th:if="${param.error}" style="color: red ">Invalid name
                     </div>
                 </div>
             </form>
@@ -44,3 +44,6 @@
     </div>
 </div>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+</body>
+</html>
