--- a/src/main/resources/templates/admin/add-movie.html
+++ b/src/main/resources/templates/admin/add-movie.html
@@ -8,7 +8,7 @@
 <!------ Include the above in your HEAD tag ---------->
 <head>
     <meta charset="UTF-8">
-    <title>New movie</title>
+    <title>Add new session</title>
 </head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 <div class="container">
