--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,6 +73,8 @@
           <h2>
             <th:message key="label.hello.cinema" />
               <a href="/movie">Movie</a>
+              <a href="/schedule">Schedule</a>
+              <a href="/schedule-admin">Schedule-admin</a>
           </h2>
         </body>
 
