--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -262,10 +262,10 @@
 
                 <td>
 
-                    <!--                    <div sec:authorize="hasRole('ROLE_USER')">-->
-                    <a th:href="@{/order/{id}(id=${sessionAdminDto.getId()})}">purchase</a>
+<!--                                        <div sec:authorize="hasRole('ROLE_USER')">-->
+                    <a th:href="@{/receipt/{id}(id=${sessionAdminDto.getId()})}">purchase</a>
                     <!--                        &lt;!&ndash;                <fmt:message key="purchase"/>&ndash;&gt;-->
-                    <!--                    </div>-->
+<!--                                        </div>-->
 
                 </td>
             </tr>
