--- a/src/main/resources/templates/admin/add-movie.html
+++ b/src/main/resources/templates/admin/add-movie.html
@@ -11,7 +11,7 @@
     <title>Add new session</title>
 </head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-<div class="container">
+<div class="container col-3">
     <div class="card card-login mx-auto text-center bg-dark">
         <div class="card-header mx-auto bg-dark">
             <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
@@ -21,7 +21,7 @@
         </div>
         <div class="card-body">
 
-            <form name="f" method="post" th:action="@{/movie/add-movie}" th:object="${movieDto}">
+            <form name="f" method="post" th:action="@{/admin/movie/add-movie}" th:object="${movieDto}">
                 <div class="input-group form-group">-->
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
