--- a/src/main/resources/templates/admin/add-session.html
+++ b/src/main/resources/templates/admin/add-session.html
@@ -13,7 +13,7 @@
     <title>New session</title>
 </head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-<div class="container">
+<div class="container col-3">
     <div class="card card-login mx-auto text-center bg-dark">
         <div class="card-header mx-auto bg-dark">
             <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
@@ -23,7 +23,7 @@
         </div>
         <div class="card-body">
 
-            <form name="f" method="post" th:action="@{/schedule-admin/add-session}" th:object="${sessionAdminDto}">
+            <form name="f" method="post" th:action="@{/admin/schedule-admin/add-session}" th:object="${sessionAdminDto}">
 
                 <div class="input-group form-group">
                     <div class="input-group-prepend">3
