--- a/src/main/resources/templates/admin/schedule-admin.html
+++ b/src/main/resources/templates/admin/schedule-admin.html
@@ -48,13 +48,14 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="nav-item" action="schedule-admin">
+                <form class="nav-item" action="/admin/schedule-admin">
                     <label for="size">Records
                         <!--                        <fmt:message key="number.records"/>-->
                     </label>
                     <input class="col-2" type="number" min="1" name="size" id="size"
                            value="${page.size}">
                     <input type="hidden" name="sort" th:value="${sort}">
+                    <!--                    <input type="hidden" name="filterFormDto" th:value="${filterFormDto}}">-->
                     <!--                           value="${not empty page.size ? page.size : '5'}">-->
                     <!--                                        <input type="hidden" name="offset" value="0">-->
                     <button type="submit" class="btn btn-dark mt-2 mb-3">Submit
@@ -80,7 +81,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a>
-                            <form method="post" th:action="@{/schedule-admin}" th:object="${filterFormDto}">
+                            <form method="post" th:action="@{/admin/schedule-admin}" th:object="${filterFormDto}">
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                         <li class="nav-item dropdown">
@@ -161,7 +162,8 @@
                                             </a>
                                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <div th:each="movie:${movieDto}">
-                                                    <li><input type="checkbox" th:field="*{movie}" th:value="${movie}">
+                                                    <li><input type="checkbox" th:field="*{movie}"
+                                                               th:value="${movie.name}">
                                                         <td th:text="${movie.getName()}"></td>
                                                     </li>
                                                 </div>
@@ -180,6 +182,9 @@
                                             </ul>
                                         </li>
                                         <li class="nav-item">
+                                            <input type="hidden" name="size"
+                                                   th:value="${page.size}">
+                                            <input type="hidden" name="sort" th:value="${sort}">
                                             <input class="btn btn-secondary" type="submit" value="submit"/>
                                         </li>
                                     </ul>
@@ -213,23 +218,24 @@
             <thead>
             <li>
                 <span>
-                    <a th:href="@{/schedule-admin(page=${page.number},size=${page.size}, sort=id)}">Id</a>
+
+                    <a th:href="@{/admin/schedule-admin(page=${page.number},size=${page.size}, sort=id)}">Id</a>
                 </span>
             </li>
             <li>
                 <span>
-                    <a th:href="@{/schedule-admin(page=${page.number},size=${page.size}, sort=movieName)}">Movie name</a>
+                    <a th:href="@{/admin/schedule-admin(page=${page.number},size=${page.size}, sort=movieName)}">Movie name</a>
                 </span>
             </li>
             <li>
                 <span>
-                    <a th:href="@{/schedule-admin(page=${page.number},size=${page.size}, sort=date)}">Date</a>
+                    <a th:href="@{/admin/schedule-admin(page=${page.number},size=${page.size}, sort=date)}">Date</a>
                 </span>
             </li>
             </li>
             <li>
                 <span>
-                    <a th:href="@{/schedule-admin(page=${page.number},size=${page.size}, sort=time)}">Time</a>
+                    <a th:href="@{/admin/schedule-admin(page=${page.number},size=${page.size}, sort=time)}">Time</a>
                 </span>
             </li>
 
@@ -241,7 +247,7 @@
     <div class="container col-11">
         <table class="table table-striped table-responsive-md btn-table table-bordered table-hover">
             <thead class="thead-dark">
-            <form action="schedule-admin">
+            <form action="/admin/schedule-admin">
 
                 <tr>
                     <!--        <th> <fmt:message key="label.date"/> </th>-->
@@ -276,14 +282,15 @@
                     <td th:text="${sessionAdminDto.status}"></td>
 
                     <td>
-                        <a class="btn btn-outline-dark" th:href="@{schedule-admin/edit/{id}(id=${sessionAdminDto.id})}">edit
+                        <a class="btn btn-outline-dark"
+                           th:href="@{/admin/schedule-admin/edit/{id}(id=${sessionAdminDto.id})}">edit
                             <!--                <fmt:message key="purchase"/>-->
                         </a>
                     </td>
                     <td>
-                        <form method="post" th:action="@{/schedule-admin/delete}">
-                            <input hidden type="number" name="id" value="${sessionAdminDto.id}"/>
-                            <input class="btn btn-outline-dark" type="submit" value="Cancel">
+                        <form th:method="delete" th:action="@{/admin/schedule-admin/{id}(id=${sessionAdminDto.id})}">
+                            <input class="btn btn-outline-dark" type="submit" value="Cancel"/>
+                        </form>
                     </td>
                 </tr>
 
@@ -293,17 +300,18 @@
         </table>
         <div class="pagination-div">
     <span th:if="${page.hasPrevious()}">
-        <a th:href="@{/schedule-admin(page=${page.number - 1},size=${page.size},sort=${sort})}">Previous</a>
+        <a th:href="@{/admin/schedule-admin(page=${page.number - 1},size=${page.size},sort=${sort}, filterFormDto=${filterFormDto})}">Previous</a>
     </span>
             <th:block th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}">
                 <span class="selected" th:if="${page.number == i}">[[${i}+1]]</span>
                 <span th:unless="${page.number == i}">
-             <a th:href="@{/schedule-admin(page=${i},size=${page.size},sort=${sort})}">[[${i}+1]]</a>
+             <a th:href="@{/admin/schedule-admin(page=${i},size=${page.size},sort=${sort},filterFormDto=${filterFormDto})}">[[${i}+1]]</a>
         </span>
             </th:block>
             <span th:if="${page.hasNext()}">
-        <a th:href="@{/schedule-admin(page=${page.number + 1},size=${page.size},sort=${sort})}">Next</a>
+        <a th:href="@{/admin/schedule-admin(page=${page.number + 1},size=${page.size},sort=${sort},filterFormDto=${filterFormDto})}">Next</a>
     </span>
         </div>
+
 </body>
 </html>
