--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://thymeleaf.org">
+
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
 <head>
-    <title>Schedule</title>
     <meta charset="UTF-8">
-    <title>Movies</title>
+    <title>Order</title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index">Index
@@ -48,7 +49,7 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="nav-item" action="schedule">
+                <form class="nav-item" action="movie">
                     <label for="size">Records
                         <!--                        <fmt:message key="number.records"/>-->
                     </label>
@@ -68,20 +69,71 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
-        <body>
+<body>
+<body>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+<div class="container col-3">
+    <div class="card card mx-auto text-center bg-dark">
+        <div class="card-header mx-auto bg-dark">
+            <span> <img src="https://amar.vote/assets/img/amarVotebd.png" class="w-75" alt="Logo"> </span><br/>
+            <span class="logo_title mt-5"> Receipt </span>
+            <!--            <h1>--><?php //echo $message?><!--</h1>-->
 
-          <h2>
-            <th:message key="label.hello.cinema" />
-              <a href="/admin/movie">Movie</a>
-              <a href="/schedule">Schedule</a>
-              <a href="/admin/schedule-admin">Schedule-admin</a>
-          </h2>
-        </body>
-        <style type="text/css">
-            body {
+        </div>
+        <div class="card-body">
 
-              background-image: url(https://phonoteka.org/uploads/posts/2022-01/1642994024_51-phonoteka-org-p-kino-fon-dlya-prezentatsii-57.jpg)
-            }
-          </style>
+            <form name="f" th:method="post" th:action="@{/receipt/{id}(id=${sessionAdminDto.getId()})}"
+                  th:object="${receiptDto}">
+                <div class="group form-group">-->
+                    <div class="group-prepend">
+                        <span class="group-text"><i class="fa-solid fa-calendar-days"></i></span>
+                    </div>
+                    <h3 class="panel-title" th:text="${sessionAdminDto.date}"></h3>
+                    <br>
 
-        </html>
+                    <br>
+                    <div class="group-prepend">
+                        <span class="group-text"><i class="fa-solid fa-time"></i></span>
+                    </div>
+                    <h3 class="panel-title" th:text="${sessionAdminDto.time}"></h3>
+                    <br>
+
+                    <br>
+                    <div class="group-prepend">
+                        <span class="group-text"><i class="fa-solid fa-text"></i></span>
+                    </div>
+                    <h3 class="panel-title" th:text="${sessionAdminDto.movieName}"></h3>
+                    <br>
+
+                    <!--                    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Errors</div>-->
+                    <br>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">3
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        <input type="number" th:field="*{numberOfSeats}" class="form-control" min=1 max="20">
+                        <div style="color:red" th:if="${#fields.hasErrors('numberOfSeats')}"
+                             th:errors="*{numberOfSeats}">
+                            Errors
+                        </div>
+                        <br>
+                    </div>
+
+
+                    <div class="form-group">
+                        <input type="submit" name="btn" value="Register"
+                               class="btn btn-outline-danger float-right login_btn">
+                    </div>
+                    <div th:if="${param.error}" style="color: red ">Invalid name
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+
+</body>
+</html>
